--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
 #################
+## SparkFun Useful stuff
+#################
+
+## AVR Development
+*.eep
+*.elf
+*.lst
+*.lss
+*.sym
+*.d
+*.o
+*.srec
+*.map
+
+## Notepad++ backup files
+*.bak
+
+## BOM files
+*bom*
+
+#################
 ## Eclipse
 #################
 
@@ -169,8 +190,3 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
-
-#############
-## Misc
-#############
-Misc/
